// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call navigateBack from press 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "height": "100%",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  null,
                  Object {},
                  null,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 18,
                      },
                      Array [
                        Object {
                          "margin": 10,
                        },
                        Object {
                          "color": "#B4B6BA",
                        },
                      ],
                    ],
                    Object {
                      "fontFamily": "icomoon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="editButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {
                  "paddingRight": 10,
                },
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#3CC8E6",
                      "fontSize": 14,
                    },
                  ],
                ]
              }
            >
              EDIT
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView>
    <View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "marginBottom": 80,
              "paddingVertical": 10,
            },
            Object {
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flex": 5,
                "flexDirection": "column",
                "justifyContent": "flex-start",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#ECEEF2",
                  "borderBottomWidth": 1,
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#505256",
                    "fontFamily": "SourceSansPro-Light",
                    "fontSize": 24,
                    "lineHeight": 30,
                  },
                ]
              }
            >
              Read "There and Back Again"
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#ECEEF2",
                  "borderBottomWidth": 1,
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                  ]
                }
              >
                Joined
              </Text>
              <Text
                onPress={[Function]}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Array [
                      Object {
                        "color": "#3CC8E6",
                        "fontFamily": "SourceSansPro-ExtraLight",
                        "fontSize": 32,
                        "lineHeight": 38,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ]
                }
                testID="joinedCount"
              />
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                  ]
                }
              >
                Completed
              </Text>
              <Text
                onPress={[Function]}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Array [
                      Object {
                        "color": "#3CC8E6",
                        "fontFamily": "SourceSansPro-ExtraLight",
                        "fontSize": 32,
                        "lineHeight": 38,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ]
                }
                testID="completedCount"
              />
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                  },
                ]
              }
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#ECEEF2",
                  "borderBottomWidth": 1,
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#A0A2A6",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Challenge Ends
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#505256",
                    "fontSize": 16,
                  },
                ]
              }
              testID="Text"
            >
              Saturday, September 22, 2018
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#A0A2A6",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Details
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "fontSize": 16,
                  },
                ]
              }
            >
              Add details to your Challenge (optional)
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/challengeDetailsTarget.png",
      }
    }
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "right": 0,
        "zIndex": -1,
      }
    }
  />
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Object {
              "alignItems": "center",
              "height": 48,
              "width": 650,
            },
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-around",
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/challengeComplete.png",
              }
            }
            style={
              Object {
                "marginHorizontal": 5,
              }
            }
          />
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {},
                ],
              ]
            }
          >
            I DID IT
          </Text>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`should render completed challenge correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "height": "100%",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  null,
                  Object {},
                  null,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 18,
                      },
                      Array [
                        Object {
                          "margin": 10,
                        },
                        Object {
                          "color": "#B4B6BA",
                        },
                      ],
                    ],
                    Object {
                      "fontFamily": "icomoon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <RCTScrollView>
    <View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "marginBottom": 80,
              "paddingVertical": 10,
            },
            Object {
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flex": 5,
                "flexDirection": "column",
                "justifyContent": "flex-start",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#ECEEF2",
                  "borderBottomWidth": 1,
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#505256",
                    "fontFamily": "SourceSansPro-Light",
                    "fontSize": 24,
                    "lineHeight": 30,
                  },
                ]
              }
            >
              Read "There and Back Again"
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#ECEEF2",
                  "borderBottomWidth": 1,
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                  ]
                }
              >
                Joined
              </Text>
              <Text
                onPress={[Function]}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Array [
                      Object {
                        "color": "#3CC8E6",
                        "fontFamily": "SourceSansPro-ExtraLight",
                        "fontSize": 32,
                        "lineHeight": 38,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ]
                }
                testID="joinedCount"
              />
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                  ]
                }
              >
                Completed
              </Text>
              <Text
                onPress={[Function]}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Array [
                      Object {
                        "color": "#3CC8E6",
                        "fontFamily": "SourceSansPro-ExtraLight",
                        "fontSize": 32,
                        "lineHeight": 38,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ]
                }
                testID="completedCount"
              />
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                  },
                ]
              }
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#ECEEF2",
                  "borderBottomWidth": 1,
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#A0A2A6",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Challenge Ends
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#505256",
                    "fontSize": 16,
                  },
                ]
              }
              testID="Text"
            >
              Saturday, September 22, 2018
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#A0A2A6",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Details
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "fontSize": 16,
                  },
                ]
              }
            >
              Add details to your Challenge (optional)
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/challengeDetailsTarget.png",
      }
    }
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "right": 0,
        "zIndex": -1,
      }
    }
  />
</View>
`;

exports[`should render joined challenge correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "height": "100%",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  null,
                  Object {},
                  null,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 18,
                      },
                      Array [
                        Object {
                          "margin": 10,
                        },
                        Object {
                          "color": "#B4B6BA",
                        },
                      ],
                    ],
                    Object {
                      "fontFamily": "icomoon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="editButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {
                  "paddingRight": 10,
                },
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#3CC8E6",
                      "fontSize": 14,
                    },
                  ],
                ]
              }
            >
              EDIT
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView>
    <View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "marginBottom": 80,
              "paddingVertical": 10,
            },
            Object {
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flex": 5,
                "flexDirection": "column",
                "justifyContent": "flex-start",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#ECEEF2",
                  "borderBottomWidth": 1,
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#505256",
                    "fontFamily": "SourceSansPro-Light",
                    "fontSize": 24,
                    "lineHeight": 30,
                  },
                ]
              }
            >
              Read "There and Back Again"
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#ECEEF2",
                  "borderBottomWidth": 1,
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                  ]
                }
              >
                Joined
              </Text>
              <Text
                onPress={[Function]}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Array [
                      Object {
                        "color": "#3CC8E6",
                        "fontFamily": "SourceSansPro-ExtraLight",
                        "fontSize": 32,
                        "lineHeight": 38,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ]
                }
                testID="joinedCount"
              />
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                  ]
                }
              >
                Completed
              </Text>
              <Text
                onPress={[Function]}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Array [
                      Object {
                        "color": "#3CC8E6",
                        "fontFamily": "SourceSansPro-ExtraLight",
                        "fontSize": 32,
                        "lineHeight": 38,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ]
                }
                testID="completedCount"
              />
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                  },
                ]
              }
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#ECEEF2",
                  "borderBottomWidth": 1,
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#A0A2A6",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Challenge Ends
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#505256",
                    "fontSize": 16,
                  },
                ]
              }
              testID="Text"
            >
              Saturday, September 22, 2018
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#A0A2A6",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Details
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "fontSize": 16,
                  },
                ]
              }
            >
              Add details to your Challenge (optional)
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/challengeDetailsTarget.png",
      }
    }
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "right": 0,
        "zIndex": -1,
      }
    }
  />
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Object {
              "alignItems": "center",
              "height": 48,
              "width": 650,
            },
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-around",
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/challengeComplete.png",
              }
            }
            style={
              Object {
                "marginHorizontal": 5,
              }
            }
          />
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {},
                ],
              ]
            }
          >
            I DID IT
          </Text>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`should render unjoined challenge correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "height": "100%",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  null,
                  Object {},
                  null,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 18,
                      },
                      Array [
                        Object {
                          "margin": 10,
                        },
                        Object {
                          "color": "#B4B6BA",
                        },
                      ],
                    ],
                    Object {
                      "fontFamily": "icomoon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="editButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {
                  "paddingRight": 10,
                },
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#3CC8E6",
                      "fontSize": 14,
                    },
                  ],
                ]
              }
            >
              EDIT
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView>
    <View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "marginBottom": 80,
              "paddingVertical": 10,
            },
            Object {
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flex": 5,
                "flexDirection": "column",
                "justifyContent": "flex-start",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#ECEEF2",
                  "borderBottomWidth": 1,
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#505256",
                    "fontFamily": "SourceSansPro-Light",
                    "fontSize": 24,
                    "lineHeight": 30,
                  },
                ]
              }
            >
              Read "There and Back Again"
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#ECEEF2",
                  "borderBottomWidth": 1,
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                  ]
                }
              >
                Joined
              </Text>
              <Text
                onPress={[Function]}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Array [
                      Object {
                        "color": "#3CC8E6",
                        "fontFamily": "SourceSansPro-ExtraLight",
                        "fontSize": 32,
                        "lineHeight": 38,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ]
                }
                testID="joinedCount"
              />
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                  ]
                }
              >
                Completed
              </Text>
              <Text
                onPress={[Function]}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Array [
                      Object {
                        "color": "#3CC8E6",
                        "fontFamily": "SourceSansPro-ExtraLight",
                        "fontSize": 32,
                        "lineHeight": 38,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ]
                }
                testID="completedCount"
              />
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                  },
                ]
              }
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#ECEEF2",
                  "borderBottomWidth": 1,
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#A0A2A6",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Challenge Ends
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#505256",
                    "fontSize": 16,
                  },
                ]
              }
              testID="Text"
            >
              Saturday, September 22, 2018
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#A0A2A6",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Details
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "fontSize": 16,
                  },
                ]
              }
            >
              Add details to your Challenge (optional)
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/challengeDetailsTarget.png",
      }
    }
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "right": 0,
        "zIndex": -1,
      }
    }
  />
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Object {
              "alignItems": "center",
              "height": 48,
              "width": 650,
            },
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Object {},
              ],
            ]
          }
        >
          JOIN
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`should render without edit correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "height": "100%",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  null,
                  Object {},
                  null,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 18,
                      },
                      Array [
                        Object {
                          "margin": 10,
                        },
                        Object {
                          "color": "#B4B6BA",
                        },
                      ],
                    ],
                    Object {
                      "fontFamily": "icomoon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <RCTScrollView>
    <View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "marginBottom": 80,
              "paddingVertical": 10,
            },
            Object {
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "flex": 5,
                "flexDirection": "column",
                "justifyContent": "flex-start",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#ECEEF2",
                  "borderBottomWidth": 1,
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#505256",
                    "fontFamily": "SourceSansPro-Light",
                    "fontSize": 24,
                    "lineHeight": 30,
                  },
                ]
              }
            >
              Read "There and Back Again"
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#ECEEF2",
                  "borderBottomWidth": 1,
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                  ]
                }
              >
                Joined
              </Text>
              <Text
                onPress={[Function]}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Array [
                      Object {
                        "color": "#3CC8E6",
                        "fontFamily": "SourceSansPro-ExtraLight",
                        "fontSize": 32,
                        "lineHeight": 38,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ]
                }
                testID="joinedCount"
              />
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 12,
                      "lineHeight": 16,
                    },
                  ]
                }
              >
                Completed
              </Text>
              <Text
                onPress={[Function]}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Array [
                      Object {
                        "color": "#3CC8E6",
                        "fontFamily": "SourceSansPro-ExtraLight",
                        "fontSize": 32,
                        "lineHeight": 38,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ]
                }
                testID="completedCount"
              />
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                  },
                ]
              }
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#ECEEF2",
                  "borderBottomWidth": 1,
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#A0A2A6",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Challenge Ends
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#505256",
                    "fontSize": 16,
                  },
                ]
              }
              testID="Text"
            >
              Saturday, September 22, 2018
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "paddingHorizontal": 40,
                  "paddingVertical": 14,
                },
                Object {},
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#A0A2A6",
                    "fontSize": 12,
                  },
                ]
              }
            >
              Details
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "fontSize": 16,
                  },
                ]
              }
            >
              Add details to your Challenge (optional)
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/challengeDetailsTarget.png",
      }
    }
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "right": 0,
        "zIndex": -1,
      }
    }
  />
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Object {
              "alignItems": "center",
              "height": 48,
              "width": 650,
            },
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {},
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-around",
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/challengeComplete.png",
              }
            }
            style={
              Object {
                "marginHorizontal": 5,
              }
            }
          />
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {},
                ],
              ]
            }
          >
            I DID IT
          </Text>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;
